--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-355.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-995.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-177.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-323.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-537.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-358.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-519.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-276.1KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-443.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-180.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇭🇰 香港-1.41MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.63MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.68.135.18, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-329.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-276.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-180.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
