--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-313.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-592.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-461.3KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 120.233.29.189, port: 65039, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-394.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-472.7KB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 波兰-208.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇨🇳 台湾-3.63MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇺🇸 美国-159.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-694.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-592.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 波兰-208.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-159.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-694.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
